@@ -3,6 +3,7 @@ Revision history for fbsql
 0.1.4   2014-02-??
         - "\l" command: display database encoding
         - "\activity" command: display client encoding
+        - align non-ASCII chars in column output properly (requires libfq 0.1.4)
 
 0.1.3   2014-02-02
         - add RPM SPEC file
